# brave-core

./: BUILD.gn
app/: brave_main_delegate.cc  brave_main_delegate.h
browser/: BUILD.gn  brave_browser_main_extra_parts.cc
browser/component_updater/: brave_component_updater_configurator.cc
browser/extensions/: BUILD.gn  brave_component_loader.cc  brave_component_loader.h  brave_component_loader_api.cc  brave_component_loader_api.h
browser/net/: BUILD.gn  brave_httpse_network_delegate.cc
browser/resources/: brave_extension.grd
browser/safebrowsing/: BUILD.gn
common/: brave_channel_info_browsertest.cc  brave_channel_info_mac.mm  url_constants.cc
common/extensions/: BUILD.gn  brave_extensions_client.cc  brave_extensions_client.h
common/extensions/api/: BUILD.gn  _api_features.json  resource_ids
patches/: chrome-app-md_extensions_strings.grdp.patch  chrome-app-settings_strings.grdp.patch  chrome-browser-resources-md_bookmarks-command_manager.js.patch  chrome-browser-resources-settings-basic_page-basic_page.html.patch  chrome-browser-resources-settings-settings_shared_css.html.patch  chrome-common-BUILD.gn.patch  master_patch.patch  third_party-WebKit-Source-modules-battery-NavigatorBattery.cpp.patch  third_party-WebKit-Source-modules-bluetooth-NavigatorBluetooth.cpp.patch  third_party-WebKit-Source-modules-credentialmanager-CredentialsContainer.cpp.patch  third_party-WebKit-Source-modules-donottrack-NavigatorDoNotTrack.cpp.patch  third_party-WebKit-Source-modules-webusb-NavigatorUSB.cpp.patch
test/: BUILD.gn
(+6 files in other folders)
